--- a/index.html
+++ b/index.html
@@ -1,11 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git rules!</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>RESUME_OLHA_KOSTINA</title>
+  </head>
+  <body>
+    <main>
+      <div class="container">
+    <div class="main">
+      
+      <div class="basic-information">
+        <!-- *//-----Summary------//* -->
+
+        <section class="summary">
+          <h1 class="title-name">Kostina Olha</h1>
+          <h2 class="title-vacancy">front-end developer</h2>
+          <h3 class="section-title-summary">summary</h3>
+          <p class="section-text">
+            I am Junior Front-End developer. I focus on HTML, CSS3, React,
+            English-Intermediate. Looking for a job. Development, practice and
+            work for the result are important for me. I intend to develop
+            innovative technologies and deliver value to people.
+          </p>
+        </section>
+
+        <!-- *//-----Projects------//* -->
+
+        <section class="section">
+          <h3 class="section-title">projects</h3>
+          <ul>
+            <li class="section-list">
+              <a class="project-link" href="https://iteam-by-goit.github.io/filmoteka/">Filmoteka</a>
+              <p class="project-text">
+                Project about searching movies, and adding favorite movies to a
+                client personal library. Using pure JS, npm packages and SCSS
+              </p>
+            </li>
+            <li class="section-list">
+              <a class="project-link" href="https://iteam-by-goit.github.io/ice-cream/">IceCream</a>
+              <p class="project-text">
+                Ice Cream company site. Neat and tasty design, responsible
+                layout. Using Parcel, SCSS, JS
+              </p>
+            </li class="section-list">
+          </ul>
+        </section>
+
+        <!-- *//----Work Experience------//* -->
+        <section class="section">
+          <h3 class="section-title">Work Experience</h3>
+          <div class="work-place">
+            <b class="position">
+              Video editing director, senior technical assistant to the chief
+              editing director
+            </b>
+            <p class="employer">LLC "TRK Ukraine", LLC "Tele Pro"</p>
+            <p>Responsibilities</p>
+            <ul class="work-list">
+              <li  class="work-item">
+                Organization and implementation of the process of rough editing
+                simultaneously with the end of the shooting period.
+              </li>
+              <li class="work-item">
+                Prompt solution of technical and creative problems associated
+                with the use of various methods of modern editing.
+              </li>
+              <li class="work-item">
+                Preparation of the material for viewing by the creative team, In
+                the course of editing, ensuring the operational readiness of the
+                content, monitoring and submitting the broadcast content for
+                approval in the prescribed manner, Ensuring compliance with the
+                production schedule
+              </li>
+            </ul>
+          </div>
+
+          <div class="work-place">
+            <b class="position"> Chief director, administrator, video editing director </b>
+            <p class="employer">Production studio "Video consultant"</p>
+            <p>Responsibilities</p>
+            <ul class="work-list">
+              <li class="work-item">
+                editing of entertainment shows - programs, operational graphics,
+                selection of musical accompaniment, maintenance of reporting
+                documentation
+              </li>
+            </ul>
+          </div>
+
+          <div class="work-place">
+            <b class="position"> Video Editing Director, senior editing director </b>
+            <p class="employer">LLC "NEW CHANNEL"</p>
+            <p>Responsibilities</p>
+            <ul class="work-list">
+              <li class="work-item">
+                installation of entertainment shows - programs, work with the
+                editor, operational graphics,
+              </li>
+              <li class="work-item">selection of musical accompaniment,</li>
+              <li class="work-item">maintenance of reporting documentation, work with 1C</li>
+            </ul>
+          </div>
+        </section>
+
+        <!-- *//----Education------//* -->
+
+        <section class="section">
+          <h3 class="section-title">education</h3>
+          <b>Kharkov Medical College №2</b>
+          <p>Prosthetic dentistry / dental prosthetics| 2002-2005</p>
+          <p>Dental Technician</p>
+        </section>
+
+        <!-- *//----Additional education------//* -->
+
+        <section class="section">
+          <h3 class="section-title">additional education</h3>
+          <b>IT School GoIT</b>
+          <p>Full stack developer</p>
+          <p>December 2020 - December 2021</p>
+        </section>
+      </div>
+      <div class="sidebar">
+        <!-- *//----Contacts------//* -->
+
+        <div class="img-thumb">
+          <img src="./images/photo.jpeg" alt="" width="300px">
+        </div>
+
+        <section class="sidebar-section">
+          <h3 class="sidebar-title">contacts</h3>
+          <ul class="sidebar-item">
+            <li class="sidebar-list list"><a href="tel:+380663652943"></a>+380663652943</li>
+            <li class="sidebar-list list">
+              <a href="mailto:noanybody26@gmail.com"></a>noanybody26@gmail.com
+            </li>
+            <li class="sidebar-list list">
+              <a href="www.linkedin.com/in/ольга-костина-2b3a3a61"></a>linkedin
+            </li>
+            <li class="sidebar-list list"><a href="https://github.com/funnykoss"></a>github</li>
+          </ul>
+        </section>
+
+        <!-- *//----Tech skills------//* -->
+
+        <section class="sidebar-section">
+          <h3 class="sidebar-title">tech skills</h3>
+          <ul class="sidebar-item">
+            <li class="sidebar-list">HTML</li>
+            <li class="sidebar-list">CSS3</li>
+            <li class="sidebar-list">SASS</li>
+            <li class="sidebar-list">GIT</li>
+            <li class="sidebar-list">WebPack</li>
+            <li class="sidebar-list">JavaScript</li>
+            <li class="sidebar-list">React</li>
+            <li class="sidebar-list">REST API</li>
+          </ul>
+        </section>
+
+  <!-- *//----Soft skills------//* -->
+
+        <section class="sidebar-section">
+          <h3 class="sidebar-title">soft skills</h3>
+          <ul class="sidebar-item">
+            <li class="sidebar-list">Teamwork</li>
+            <li class="sidebar-list">Communication</li>
+            <li class="sidebar-list">Decision-making</li>
+          </ul>
+        </section>
+
+  <!-- *//----Language skills------//* -->
+
+        <section class="sidebar-section">
+          <h3 class="sidebar-title">language skills</h3>
+          <ul class="sidebar-item">
+            <li class="sidebar-list">Ukrainian-native</li>
+            <li class="sidebar-list">Russian-native</li>
+            <li class="sidebar-list">English-intermediate</li>
+          </ul>
+        </section>
+      </div>
+      </div>
+    </div>
+    </main>
+  </body>
 </html>
