--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <main>
       <div class="container">
     <div class="main">
-      
-      <div class="basic-information">
-        <!-- *//-----Summary------//* -->
 
-        <section class="summary">
-          <h1 class="title-name">Kostina Olha</h1>
-          <h2 class="title-vacancy">front-end developer</h2>
-          <h3 class="section-title-summary">summary</h3>
-          <p class="section-text">
-            I am Junior Front-End developer. I focus on HTML, CSS3, React,
-            English-Intermediate. Looking for a job. Development, practice and
-            work for the result are important for me. I intend to develop
-            innovative technologies and deliver value to people.
-          </p>
-        </section>
+    <div>
+      <!-- *//-----Summary------//* -->
+      <section class="summary">
+        <h1 class="title-name">Kostina Olha</h1>
+        <h2 class="title-vacancy">front-end developer</h2>
+        <h3 class="section-title-summary">summary</h3>
+        <p class="section-text">
+          I am Junior Front-End developer. I focus on HTML, CSS3, React,
+          English-Intermediate. Looking for a job. Development, practice and
+          work for the result are important for me. I intend to develop
+          innovative technologies and deliver value to people.
+        </p>
+      </section>
+      <div class="basic-information">
 
         <!-- *//-----Projects------//* -->
 
@@ -47,7 +47,7 @@
                 Ice Cream company site. Neat and tasty design, responsible
                 layout. Using Parcel, SCSS, JS
               </p>
-            </li class="section-list">
+            </li >
           </ul>
         </section>
 
@@ -123,9 +123,11 @@
           <h3 class="section-title">additional education</h3>
           <b>IT School GoIT</b>
           <p>Full stack developer</p>
-          <p>December 2020 - December 2021</p>
+          <p>December 2020 - Until now</p>
         </section>
       </div>
+</div>
+
       <div class="sidebar">
         <!-- *//----Contacts------//* -->
 
@@ -136,14 +138,16 @@
         <section class="sidebar-section">
           <h3 class="sidebar-title">contacts</h3>
           <ul class="sidebar-item">
-            <li class="sidebar-list list"><a href="tel:+380663652943"></a>+380663652943</li>
             <li class="sidebar-list list">
-              <a href="mailto:noanybody26@gmail.com"></a>noanybody26@gmail.com
+              <a href="tel:+380663652943"> +380663652943 </a></li>
+            <li class="sidebar-list list">
+              <a href="mailto:noanybody26@gmail.com"> noanybody26@gmail.com</a>
             </li>
             <li class="sidebar-list list">
-              <a href="www.linkedin.com/in/ольга-костина-2b3a3a61"></a>linkedin
+              <a href="https://linkedin.com/in/olha-kostina"> linkedin</a>
             </li>
-            <li class="sidebar-list list"><a href="https://github.com/funnykoss"></a>github</li>
+            <li class="sidebar-list list"><a href="https://github.com/funnykoss">github</a>
+            </li>
           </ul>
         </section>
 
